removed unnecessary bootstrap els

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Stacy Mark Web Portfolio",
-  "name": "Stacy Mark Web Portfolio",
+  "short_name": "test",
+  "name": "test",
   "icons": [
     // {
     //   "src": "favicon.ico",
